--- a/src/global.css
+++ b/src/global.css
@@ -1,9 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 
 :root {
-  --primary-color: #cf197d;
-  --primary-color: #802c4d;
-  --primary-color: hsl(336, 80%, 34%);
+  --primary-color: #9c1149;
   --grey-1: #3f3f3f;
   --grey-2: #c8c8c8;
   --bg-grey: #eee;
